--- a/index.html
+++ b/index.html
@@ -1,80 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-
-  <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <header id="header">     
-      <nav id="nav-bar"  class="navbar navbar-light bg-light">
-        <ul>
-          <li><img id="header-img" src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="company logo"></li> 
-          <li><a class="nav-link  nav-item " href="#features">Features</a></li>
-          <li><a class="nav-link nav-item " href="#how">How it works</a></li>
-          <li><a class="nav-link nav-item " href="#pricing">Pricing</a></li>
-       </ul>
-      </nav>
-      
-    </header>
-    <div id="features">
-        <div>
-          <h1>What is Lorem Ipsum</h1>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
-        </div>
-        <div>
-          <h1>Why do we use it</h1>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of</p>
-        </div>
-        <div>
-          <h1>Where does it come from</h1>
-          <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,</p>
-        </div>
-    </div>
-    <div id="how">
-      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-    </div>
-    <div id="pricing" class="flex">
-        <div class="price">
-          <h1>basic</h1>
-          <p>Lorem Ipsum </p>
-          <p>Lorem Ipsum </p>
-          <p>Lorem Ipsum </p>
-        </div>
-        <div class="price">
-          <h1>premium</h1>
-          <p>Lorem Ipsum </p>
-          <p>Lorem Ipsum </p>
-          <p>Lorem Ipsum </p>
-        </div>
-        <div class="price">
-          <h1>pro</h1>
-          <p>Lorem Ipsum </p>
-          <p>Lorem Ipsum </p>
-          <p>Lorem Ipsum </p>
-        </div>
-    </div>
-
-    <form action="https://www.freecodecamp.com/email-submit" id="form">
-      <input id="email" type="email" placeholder="Please enter your email:" name="email">
-      <input type="submit" id="submit" >
-    </form>
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
-    <script  src="js/index.js"></script>
-  </body>
-</html>
+"Hello World" 
